--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
 					<li><a href="#">GALLERY</a></li>
 					<li><a href="#">SERVICES</a></li>
 					<li><a href="#">TESTIMONIALS</a></li>
-					<li><a href="#">CONTACT</a></li>
+					<li><a href="#" class="contact">CONTACT</a></li>
 				</ul>
 			</nav>
 		</header>
 		<div id="photos">
 		<div class="photoset-grid-lightbox" data-layout="12">
-  			<img src="assets/img/photo1.jpg">
-  			<img src="assets/img/photo2.jpg">
-  			<img src="assets/img/photo3.jpg">
+  			<img src="assets/img/photo1.jpg" alt="flowers">
+  			<img src="assets/img/photo2.jpg" alt="flowers">
+  			<img src="assets/img/photo3.jpg" alt="flowers">
 		</div><!--/photoset-grid-lightbox-->
 	</div><!--/photos-->
 		<div class="buttonbox">
 			<a class="button" href="#">Enquire Now</a>
 		</div><!--/buttonbox-->
 		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-		<script src="assets/photoset-grid/jquery.photoset-grid.js"></script>
+		<script src="assets/photoset-grid/jquery.photoset-grid.min.js"></script>
 		<script src="assets/photoset-grid/js/jquery.colorbox.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
